--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			   		</div>
 				  </div>
 			   	<div class="row">  	
-			   		<div class="col-xs-4 add">
+			   		<div class="col-xs-12 col-sm-4 col-md-3 col-lg-3 add">
 						<form id="char-form">
 							<div class="form-group">
 								<label for="end">Add a Simpsons Character: </label>
@@ -34,7 +34,7 @@
 						</form>						
 			   		</div>
 			   	</div>
-			   	<div class=" row gifs"> 
+			   	<div class="row gifs"> 
 			
 			   	</div>
 		   </div>
